# trame

./: .gitignore  AGENTS.md  CNAME  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  README.md.in  why3find.json
.config/: dodeca.styx  nextest.toml
.config/captain/: config.styx
.config/captain/readme-templates/: readme-footer.md  readme-header.md
.config/squiggles/: config.styx
.config/tracey/: config.styx
.docker/: Dockerfile  Dockerfile.afl  Dockerfile.creusot  Dockerfile.soteria  Dockerfile.verus
.github/workflows/: ci.yml  release-plz.yml  website.yml
creusot-intervals/: Cargo.toml  README.md  README.md.in
creusot-intervals/src/: lib.rs
docs/: .gitignore  spec.md
docs/content/: _index.md
docs/content/spec/: _index.md  exec-jit.md  format-ir.md  format-layers.md  ops.md  parse-ir.md  trame-source.md  vm-ir.md
docs/static/css/: style.css
docs/templates/: base.html  index.html  page.html  section.html
hooks/: pre-push
trame/: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  README.md.in  design-pointer.md
trame-dynasm/: Cargo.toml  README.md  README.md.in
trame-dynasm/benches/: decode.rs  decode_json.rs
trame-dynasm/src/: lib.rs
trame-exec/: Cargo.toml  README.md  README.md.in
trame-exec/src/: lib.rs
trame-fuzz/: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  README.md.in
trame-fuzz/in-solver/: enum  optional-struct
trame-fuzz/in-vshape/: nested-struct  pointer  scalar
trame-fuzz/src/: main.rs
trame-interpreter/: Cargo.toml  README.md  README.md.in
trame-interpreter/src/: lib.rs
trame-ir/: Cargo.toml  README.md  README.md.in
trame-ir/src/: lib.rs
trame-json/: Cargo.toml  README.md  README.md.in
trame-json/src/: lib.rs
trame-postcard/: Cargo.toml  README.md  README.md.in
trame-postcard/src/: lib.rs
trame-proptest/: Cargo.toml  README.md  README.md.in
trame-proptest/proptest-regressions/: main.txt
trame-proptest/src/: main.rs
trame-ref/: Cargo.toml  DESIGN.md  Justfile  PROOFS.md  README.md  TODO-deferred.md  TODO-direct-fill.md  TODO.md
trame-ref/afl/: .gitignore  CLAUDE.md  Cargo.toml  README.md
trame-ref/afl/src/: main.rs
trame-ref/src/: arena.rs  enum_helpers.rs  errors.rs  frame.rs  lib.rs  partial.rs  shape_desc.rs  slab.rs  verified.rs
trame-ref/src/ops/: builder.rs  mod.rs
trame-ref/src/partial/: end.rs  enum_variant.rs  list.rs  map.rs  option.rs  push.rs  result.rs  set.rs  set_collection.rs
trame-ref/tests/: arrays.rs  enums.rs  lists.rs  maps.rs  options.rs  results.rs  scalars.rs  sets.rs  structs.rs
trame-runtime/: CHANGELOG.md  Cargo.toml  README.md  README.md.in  crate.llbc.json
trame-runtime/src/: creusot_stub.rs  lib.rs
trame-runtime/src/creusot_rt/: mod.rs  proofs.rs
trame-runtime/src/live/: mod.rs  tests.rs
trame-runtime/src/verified/: byte_range.rs  mod.rs  proofs.rs  tests.rs  verus_bridge.rs
trame-runtime/verus/: README.md  byte_range_clear_proof.rs  tree_init_recursive_proof.rs
trame-solver/: CHANGELOG.md  Cargo.toml  README.md
trame-solver/src/: lib.rs
trame-toy-json/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
trame-toy-json/src/: lib.rs
trame-toy-postcard/: Cargo.toml  README.md  README.md.in
trame-toy-postcard/benches/: decode.rs
trame-toy-postcard/src/: lib.rs
trame-toy-postcard/src/snapshots/: trame_toy_postcard__tests__compile_demo3_program_sexp.snap  trame_toy_postcard__tests__compile_demo_program_sexp.snap
trame-verus/: Cargo.toml  README.md  README.md.in
trame-verus/src/: byte_range_clear_proof.rs  lib.rs  tree_init_recursive_proof.rs
trame/afl/: Cargo.toml
trame/afl/src/: main.rs
trame/src/: arena.rs  backend.rs  byte_range.rs  dyn_shape.rs  heap.rs  lib.rs  node.rs  ops.rs  partial.rs  ptr.rs  runtime.rs  shape.rs  trame.rs
trame/src/ops/: builder.rs
trame/src/runtime/: live.rs  verified.rs
trame/src/runtime/live/: mod.rs
trame/src/runtime/verified/: byte_range.rs  mod.rs
trame/src/trame/: errors.rs  heap_value.rs  mod.rs  proofs.rs  tests.rs
