[workspace]
resolver = "2"
members = ["trame", "trame-runtime", "trame-fuzz", "trame-proptest", "trame-verus"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/trame"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)'] }

[workspace.dependencies]
creusot-std = { git = "https://github.com/creusot-rs/creusot", package = "creusot-std", version = "0.9.0" }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.2" }
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.2" }
smallvec = "2.0.0-alpha.12"
afl = "0.17"
arbitrary = { version = "1", features = ["derive"] }
proptest = "1"
