[workspace]
resolver = "2"
members = [
    "trame",
    "trame-runtime",
    "trame-fuzz",
    "trame-proptest",
    "trame-toy-json",
    "trame-solver",
    "trame-ir",
    "trame-postcard",
    "trame-json",
    "trame-interpreter",
    "trame-dynasm",
    "trame-exec",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/trame"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(creusot)'] }

[workspace.dependencies]
# workspace deps
trame = { path = "trame", version = "0.1.0" }
trame-runtime = { path = "trame-runtime", version = "0.1.0" }
trame-solver = { path = "trame-solver", version = "0.1.0" }
trame-ir = { path = "trame-ir", version = "0.1.0" }
trame-postcard = { path = "trame-postcard", version = "0.1.0" }
trame-json = { path = "trame-json", version = "0.1.0" }
trame-interpreter = { path = "trame-interpreter", version = "0.1.0" }
trame-dynasm = { path = "trame-dynasm", version = "0.1.0" }
trame-exec = { path = "trame-exec", version = "0.1.0" }
# third-party deps
creusot-std = { git = "https://github.com/creusot-rs/creusot", package = "creusot-std", version = "0.10.0-dev" }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.2" }
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.2" }
facet-postcard = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43.2" }
smallvec = "2.0.0-alpha.12"
afl = "0.17"
arbitrary = { version = "1", features = ["derive"] }
proptest = "1"
