[package]
name = "trame-dynasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "dynasm-rt backend for trame-ir decode programs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core.workspace = true
trame-ir.workspace = true
trame-interpreter.workspace = true
dynasmrt = "5"

[dev-dependencies]
facet.workspace = true
facet-postcard.workspace = true
facet-json.workspace = true
trame-postcard.workspace = true
trame-json.workspace = true
divan = "0.1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "decode_json"
harness = false

[lints]
workspace = true
