[package]
name = "trame-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
# Standalone mode: builds without AFL integration for reproducing crashes,
# running under Miri, or generating coverage reports
standalone = []

[dependencies]
afl.workspace = true
arbitrary.workspace = true
facet.workspace = true
facet-core.workspace = true
trame.workspace = true
trame-solver.workspace = true

[lints]
workspace = true
