[package]
name = "trame-interpreter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interpreter backend for trame-ir decode programs"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core.workspace = true
trame-ir.workspace = true

[dev-dependencies]
facet.workspace = true
facet-postcard.workspace = true
trame-postcard.workspace = true

[lints]
workspace = true
