[package]
name = "trame-json"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON program generator for trame-ir"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core.workspace = true
trame-ir.workspace = true

[dev-dependencies]
facet.workspace = true
trame-postcard.workspace = true
trame-interpreter.workspace = true

[lints]
workspace = true
