[package]
name = "trame-proptest"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.verus]
verify = false

[dependencies]
proptest.workspace = true
trame = { path = "../trame" }

[lints]
workspace = true
