[package]
name = "trame-proptest"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
facet.workspace = true
facet-core.workspace = true
proptest.workspace = true
trame = { path = "../trame" }
trame-solver = { path = "../trame-solver" }

[lints]
workspace = true
