[package]
name = "trame-ref"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference implementation of partial value construction for facet"
keywords = ["reflection", "introspection", "facet", "runtime", "manipulation"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"
readme = "README.md"
publish = false

[package.metadata]

[package.metadata.kani]
default-unwind = 10

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []

[dependencies]
bitflags.workspace = true
facet-core.workspace = true
smallvec.workspace = true

[dev-dependencies]
facet.workspace = true

[lints]
workspace = true
