[package]
name = "trame-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime traits and implementations for trame"
keywords = ["reflection", "introspection", "facet", "verification", "kani"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"

[package.metadata.kani]
default-unwind = 10

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []

[dependencies]
facet-core.workspace = true

[dev-dependencies]
facet.workspace = true

[lints]
workspace = true

[target.'cfg(creusot)'.dependencies]
creusot-std = { git = "https://github.com/creusot-rs/creusot", package = "creusot-std" }
