[package]
name = "trame-solver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shape-resolution IR and adapters for trame deserializers"
keywords = ["reflection", "facet", "flatten", "untagged"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"
readme = "README.md"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet-core.workspace = true
facet-solver.workspace = true

[dev-dependencies]
facet.workspace = true

[lints]
workspace = true
