[package]
name = "trame-toy-postcard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Toy postcard deserializer built on trame primitives"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
trame.workspace = true
facet-core.workspace = true

[dev-dependencies]
facet.workspace = true

[lints]
workspace = true
