[package]
name = "trame-verus"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vstd = "=0.0.0-2026-02-15-0106"

[package.metadata.verus]
verify = true

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lints]
workspace = true
