[package]
name = "trame"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Formally verified partial value construction for facet"
keywords = ["reflection", "introspection", "facet", "verification", "kani"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://facet.rs"
readme = "README.md"

[package.metadata]

[package.metadata.kani]
default-unwind = 10

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
creusot-canary = []

[dependencies]
facet-core.workspace = true
trame-runtime.workspace = true
smallvec.workspace = true

[lints]
workspace = true

[target.'cfg(creusot)'.dependencies]
creusot-std.workspace = true
