[package]
name = "trame-afl"
version = "0.0.0"
publish = false
edition = "2024"

[features]
# Standalone mode: builds without AFL integration for reproducing crashes,
# running under Miri, or generating coverage reports
standalone = []

[dependencies]
afl = "0.17"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.facet]
git = "https://github.com/facet-rs/facet"
branch = "main"

[dependencies.facet-core]
git = "https://github.com/facet-rs/facet"
branch = "main"

[dependencies.trame]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
